years should be integers, and use the entitymanager